--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>React Contacts</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  
+
   <!-- Auth0Lock script -->
   <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles/App.css">
 
   <!-- Setting the right viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
